--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,43 @@
 # Python
 __pycache__/
 *.py[cod]
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+ENV/
+env.bak/
+venv.bak/
 
-# IDE (PyCharm, VS Code 等)
-.idea/
+# Environment variables
+.env
+*.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE
 .vscode/
+.idea/
 *.swp
 *.swo
+*~
 
-# 虚拟环境
-venv/
-env/
-
-# Streamlit 本地密钥（绝不能上传！）
-.streamlit/secrets.toml
-
-# 系统文件
+# OS
 .DS_Store
 Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Database
+*.db
+*.sqlite
+
+# 临时文件
+temp/
+tmp/
